@@ -246,27 +246,6 @@ def create_testplugin_pkg(pkgname,pkg_deps):
     for sf in itertools.chain( p.glob('*.hh'), p.glob('*.cc') ):
         add_file( f'pkgs/{pkgname}/libsrc/{sf.name}', link_target = sf )
 
-    _plname = pkg_libname( pkgname )
-    testload_content = """#!/usr/bin/env python3
-import os
-pl=os.environ['SBLD_LIB_DIR']+'/'+'<<PKGLIBNAME>>'
-if not os.path.exists(pl):
-    raise SystemExit(f'Not found: {pl}')
-os.environ['NCRYSTALDEV_DEBUG_PLUGIN']='1'
-os.environ['NCRYSTALDEV_PLUGIN_LIST']=pl
-os.environ['NCRYSTALDEV_PLUGIN_RUNTESTS']='1'
-os.environ['NCRYSTALDEV_REQUIRED_PLUGINS']='DummyPlugin'
-import NCrystalDev as NC
-pls = [e for e in NC.browsePlugins() if e[0]=='DummyPlugin']
-if not pls:
-    raise SystemExit(f'Could not load DummyPlugin as expected')
-assert len(pls) == 1
-print(f'Verified loading of DummyPlugin from {pl}.')
-print('All ok')\n""".replace('<<PKGLIBNAME>>',_plname)
-    add_file( f'pkgs/{pkgname}/scripts/testload',
-              make_executable = True,
-              content = testload_content )
-
 def define_files():
 
     #TODO: Add an ncdevenv wrapper, which make sure that all ncrystal cmdline
